--- a/views/layout.jade
+++ b/views/layout.jade
@@ -41,4 +41,5 @@ html
   script(type='text/javascript', src='/javascripts/mylibs/helper.js')
   script(type='text/javascript', src='/javascripts/init.js')
   script
+    MBP.hideUrlBar();
     MBP.scaleFix();
