--- a/views/index.jade
+++ b/views/index.jade
@@ -1,17 +1,20 @@
-section#info.debug
-	h2 Number of connected users: 
-	a#status status
-	a#sendnote1 send note.1
-	a#sendnote2 send note.2
-	a#panic panic
 
-
-div#main
-	h1= title 
-		<span> sequencer</span>
-	p Welcome to #{title}
-	p 
-		label(for="steps") steps
-		input#amount(type="text")
-	#slider
-		
+#container
+    header
+        h1= title 
+            <span> sequencer</span>
+    div#pattern
+        canvas#pattern
+   
+    div#main
+        p 
+            label(for="steps") steps
+            input#amount(type="text")
+        #slider
+    section#info.debug
+          h2 Number of connected users: 
+          a#status status
+          a#sendnote1 send note.1
+          a#sendnote2 send note.2
+          a#panic panic
+        
