refactor code for organization, socketmanger added

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -39,6 +39,8 @@ html
   
   script(type='text/javascript', src='/socket.io/socket.io.js')
   script(type='text/javascript', src='/javascripts/mylibs/helper.js')
+  script(type='text/javascript', src='/javascripts/mylibs/euclid.js')
+  script(type='text/javascript', src='/javascripts/mylibs/SocketManager.js')
   script(type='text/javascript', src='/javascripts/init.js')
   script
     MBP.hideUrlBar();
