--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,6 +26,9 @@ html
     link(rel='stylesheet', href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css')
 
     script(src='/javascripts/libs/modernizr-custom.js')
+    script(type="text/javascript", src="http://use.typekit.com/uzf3qwz.js")
+    script
+        try{Typekit.load();}catch(e){}
 
   body!= body
 
